[] Allow Expand/Collapse for R/O databases via toolbar.
[] Set focus to new view on switching between Tree <-> List views.
[] Update toolbar when view changes (List <-> Tree).
[] Set PWS title when opening a database at startup.
[] Allow List view to process all characters e.g. Page Up/Down, Home, End,
Arrows etc.
[] Fix program crash on clicking CompareResults dialog header.

Changes to Existing Features in 3.12
====================================
[1885710, 1852862] When re-showing the Find toolbar, any existing search
argument is selected to allow easier deletion and modification.
[1846688, 1224373] When generating a new password, it is no longer displayed in
a separate window for approval. If you want to generate another
password, just click on Generate again. If you want to revert to the
existing password when editing an entry, just click on Cancel.
[] New password generation option: Pronounceable passwords. Thanks to
Tom Van Vleck, Morrie Gasser, and Dan Edwards.
[] New disabled buttons for New Toolbar.

New Features for 3.12
=====================
[1842449, 1000639] Implement standard F3 for repeat Find shortcut.
[1838738] Implement minimum lengths of types of characters in the
password policy i.e. 3 uppercase + 2 lowercase + 1 digit etc.  Feature
is incompatible with 'pronounceable' or 'easy-to-read' passwords.
[] Implement individual password policy for entries that will override
the current database policy.  User can still override the individual
policy or the database policy.
[] An entry may have multiple references, or "shortcuts" to it. These
may be thought of as "synonyms" of the entry. See online help for
details. If the user displays the Icon column in the List view, it will
display the corresponding icon to distinguish between each type: normal,
alias, shortcut, the normal entry with aliases and the normal entry with
shortcuts.
[] Graphics added to menus.
[] Allow user to select a font for Passwords as well as for the Tree/List